# you-get-an-a-

./: .gitignore  CMakeLists.txt  main.cpp
src/: assignment.cpp  assignment.hpp  assignment_grade.cpp  assignment_grade.hpp  gradebook.cpp  gradebook.hpp  student.cpp  student.hpp
tests/: test_assignment.cpp  test_assignment_grade.cpp  test_gradebook.cpp  test_student.cpp
